--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@mui/icons-material": "^5.8.0",
     "@mui/material": "^5.8.1",
     "@reduxjs/toolkit": "^1.8.2",
+    "@tippyjs/react": "^4.2.6",
     "dayjs": "^1.11.2",
     "formik": "^2.2.9",
     "jwt-decode": "^3.1.2",
