--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@cloudinary/react": "^1.4.1",
+    "@cloudinary/url-gen": "^1.8.0",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.8.0",
@@ -10,6 +12,7 @@
     "@reduxjs/toolkit": "^1.8.2",
     "@tippyjs/react": "^4.2.6",
     "dayjs": "^1.11.2",
+    "emoji-picker-react": "^3.5.1",
     "formik": "^2.2.9",
     "jwt-decode": "^3.1.2",
     "jwt-encode": "^1.0.1",
@@ -20,6 +23,7 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.12.0",
     "react-toastify": "^9.0.2",
     "uuid": "^8.3.2",
     "yup": "^0.32.11"
