--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jwt-encode": "^1.0.1",
     "miragejs": "^0.1.44",
     "mockman-js": "^1.1.5",
+    "moment": "^2.29.3",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.2",
